Prevent double borders in icon grid

--- a/src/modules/IconList/IconList.module.css
+++ b/src/modules/IconList/IconList.module.css
@@ -4,19 +4,21 @@
 	margin: 3rem 0;
 	text-align: center;
 	border-radius: var(--border-radius);
-	border: solid 2px currentColor;
+
 	overflow: hidden;
 	list-style: none;
 	padding: 0;
 	margin: 2rem 0;
 	text-indent: 0;
 	width: 100%;
+	/* Creates an inset border, preventing double borders from items */
+	box-shadow: inset 0 0 0 2px currentColor;
 }
 
 .listItem {
 	border: solid 1px currentColor;
-	/* Prevent double borders between items */
-	margin-left: -1px;
+	/* Prevents double borders from adjacent items */
+	border-width: 0 1px 1px 0;
 }
 
 .download {
